daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemon
spec:
  selector:
    matchLabels:
      app: daemon
  template:
    metadata:
      labels:
        app: daemon
    spec:
      containers:
      - name: container1
        image: sangsoodong/dockertest
        ports:
        - containerPort: 3000
