deploy-replica.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-replica1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy-replica1
  template:
    metadata:
      labels:
        app: deploy-replica1
    spec:
      containers:
      - name: container1
        image: wotkddl21/dockertest
        ports:
        - containerPort: 3000
