deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod1
spec:
  selector:
    matchLabels:
      app: pod1
  template:
    metadata:
      labels:
        app: pod1
    spec:
      containers:
      - name: container1
        image: sangsoodong/dockertest  # ex) sangsoodong/dockertest
        #        image: {dockerhub username}/dockertest  # ex) sangsoodong/dockertest
        ports:
        - containerPort: 3000
