statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: astatefulset
spec:
  serviceName: statefulset
  selector:
    matchLabels:
      app: astatefulset
  template:
    metadata:
      labels:
        app: astatefulset
    spec:
      containers:
      - name: container1
        image: {dockerhub username}/dockertest
        ports:
        - containerPort: 3000
