clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip1
spec:
  type: ClusterIP
  selector:
    app: pod1
  ports:
  - name: container1
    protocol: TCP
    port: 3000
    targetPort: 3000
