loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer1
spec:
  type: LoadBalancer
  selector:
    app: pod1
  ports:
  - name: container1
    protocol: TCP
    port: 3000
    targetPort: 3000
