nginx-empty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-empty-pod
  labels:
    app: nginx-empty-pod
spec:
  selector:
    matchLabels:
      app: nginx-empty-pod
  template:
    metadata:
      labels:
        app: nginx-empty-pod
    spec:
      containers:
      - name: nginx-container
        image: nginx
        volumeMounts:
        - name: empty-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: empty-volume
        emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-empty-pod
  ports:
  - name: nginx-container-service
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31234
