nginx-hostpath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hostpath-pod
  labels:
    app: nginx-hostpath-pod
spec:
  selector:
    matchLabels:
      app: nginx-hostpath-pod
  template:
    metadata:
      labels:
        app: nginx-hostpath-pod
    spec:
      containers:
      - name: nginx-hostpath-container
        image: nginx
        volumeMounts:
        - name: hostpath-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostpath-volume
        hostPath: 
          path: /nginx/test
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hostpath-nodeport
spec:
  type: NodePort
  selector:
    app: nginx-hostpath-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31313
