nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod
  labels:
    app: nginx-pod
spec:
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
      - name: nginx-container
        image: nginx
        volumeMounts:
        - name: empty-volume
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 3000
      volumes:
      - name: empty-volume
        emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-pod
  ports:
  - name: nginx-container-service
    protocol: TCP
    port: 3000
    targetPort: 3000
