nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport1
spec:
  type: NodePort
  selector:
    app: pod1
  ports:
  - name: container1
    protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30000
