ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
  - host:
    http:
      paths:
      - path: /pod1
        backend:
          serviceName: clusterip1
          servicePort: 3000
      - path: /pod2
        backend:
          serviceName: clusterip2
          servicePort: 3000
